--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
     "bcrypt": "^6.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0"
