--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@supabase/supabase-js": "^2.81.1",
     "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.18.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
