--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^8.0.3",
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.18.2",
+    "express-validator": "^7.3.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
