--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.3.1",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
